# claw

./: .env.example  .gitignore  AGENTS.md  README.md  mcp_servers.example.json  patch_frontend.py  patch_streaming.py  pyproject.toml
scripts/: check_mcp_adapters.py  check_system_foundations.py
src/personal_assistant/: __init__.py  app_logger.py  assistant.py  cli.py  config.py  database.py  llm_client.py  mcp_client.py  mcp_document_server.py  skill_engine.py  time_system.py  user_store.py  web.py  web_app.py
src/personal_assistant/web/: index.html
